added user roles list api
